<?xml version="1.0"?>
<package>
  <name>squirrel_tracker</name>
  <version>0.1.0</version>
  <description>The squirrel_tracker package</description>


  <maintainer email="pregier@cs.uni-bonn.de">Peter Regier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libopenni-sensor-primesense-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>squirrel_tracker_msgs</build_depend>

  <run_depend>libopenni2-dev</run_depend>
  <run_depend>libusb-1.0-dev</run_depend> 
  <run_depend>libopenni-sensor-primesense-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>  
  <run_depend>squirrel_tracker_msgs</run_depend>

  <export>
  <nodelet plugin="${prefix}/nodelet_plugins.xml" />	
  </export>
</package>
